fixed contrast ratio

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -8,7 +8,7 @@ $h3_font_size: 18px;
 $h1_font_size: 30px;
 $font_weight: 700;
 $primary-color: blue;
-$secondary-color: #088881;
+$secondary-color: #065450;
 
 @mixin font-props {
 	font-family: $fontstack;
